--- a/requirements.txt
+++ b/requirements.txt
@@ -1,10 +1,9 @@
-CurrencyConverter==0.17.9
-distlib==0.3.7
-exceptiongroup==1.1.2
-frozenlist==1.4.0
+certifi==2023.7.22
+charset-normalizer==3.2.0
 idna==3.4
-iniconfig==2.0.0
 py-currency-converter==1.2.0
 pycoingecko==3.1.0
-pyTelegramBotAPI==4.12.0
+pyTelegramBotAPI==4.13.0
 requests==2.31.0
+telebot==0.0.5
+urllib3==2.0.4
